# lichen-workspace

./: .gitignore  .pre-commit-config.yaml  Foundation_Stones_of_the_System.txt  Makefile  Makefile.rag_v0  PROTOCOL_ROUTER_IMPLEMENTATION.md  README.md  ROUTER_MOVED_TO_ROOT.md  directory_tree.txt  fresh_query_protocol.py  protocol_template_locked_v1.json  pytest.ini  requirements-dev.txt  router_improvement_plan.md  test_hybrid.py  test_router_smoke.py  test_workflow_trigger.md
.backups/: after_conflict_returning_to_integrity.json  aligning_investor_energy_with_the_field.json  angels_vs.json  building_a_field_aligned_sales_process.json  built_for_wholeness.json  clearing_entry.json  closing_a_chapter.json  cofounder_and_team_energetics.json  composting_the_old_signal.json  decision_making_in_rhythm.json  do_we_need_to_raise.json  feeding_the_roots_of_resilience.json  handing_it_on.json  holding_my_rhythm.json  (+27 more)
lichen-chunker/: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
lichen-chunker/.claude/: settings.local.json
lichen-chunker/libs/: protocol_template_locked_v1.json  protocol_template_schema_v1.json
lichen-chunker/samples/: the_leadership_im_actually_carrying.json
lichen-chunker/src/lichen_chunker/: __init__.py  chunking.py  cli.py  indexer.py  io_utils.py  pipeline 2.py  pipeline.py  schema_validation.py  types.py
lichen-chunker/src/lichen_chunker/embeddings/: __init__.py  base.py  openai_backend.py  sbert_backend.py
lichen-chunker/tests/: test_chunking.py  test_pipeline_e2e.py  test_validation.py
lichen-chunker/ui/: app.py
(+519 files in other folders)
